--- a/Bai03/Bai03.vcxproj.filters
+++ b/Bai03/Bai03.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Student_Management.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StudentNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Student.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StudentNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
